--- a/css/style.css
+++ b/css/style.css
@@ -184,11 +184,11 @@
     outline: none;
 }
 
-#nav-form::placeholder{
+#nav-form::placeholder {
     color: white;
 }
 
-h6{
+h6 {
     color: white;
 }
 
@@ -296,4 +296,21 @@ h6{
 .testimonial-carousel .owl-dot.active {
     background: var(--dark);
     border-color: var(--primary);
+}
+
+
+/* dashboard  */
+.card-hover {
+    width: 100%;
+    height: 100%;
+    background: rgba(187, 19, 19, 0.8);
+    align-items: center;
+    display: none !important;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+}
+
+.card:hover  .card-hover{
+    display: flex !important;
 }
